[gd_scene load_steps=5 format=2]

[ext_resource path="res://Shop/ShopBase.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Prompt-ExtraBold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="Unitspace" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace"]
margin_right = 1920.0
margin_bottom = 672.0

[node name="Center Container" type="CenterContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer"]
margin_right = 1920.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Unitcontainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/Center Container"]
margin_left = 960.0
margin_top = 167.0
margin_right = 960.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer"]
margin_top = 338.0
margin_right = 1920.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftBorder" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer"]
margin_right = 807.0
margin_bottom = 334.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer"]
margin_left = 811.0
margin_right = 1108.0
margin_bottom = 334.0

[node name="TopSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 297.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="ReRollButtonButton" type="Button" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 297.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Reroll Shop"

[node name="GoldSpacer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 297.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer/VBoxContainer/GoldSpacer"]
margin_left = 148.0
margin_top = 80.0
margin_right = 148.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )

[node name="RightBorder" type="MarginContainer" parent="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer"]
margin_left = 1112.0
margin_right = 1920.0
margin_bottom = 334.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3

[node name="BottomSpacer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 880.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="NextLevelButton" type="Button" parent="MarginContainer/VBoxContainer/BottomSpacer"]
margin_right = 1920.0
margin_bottom = 200.0
text = "Proceed To The Next Level"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Unitspace/HBoxContainer/HBoxContainer/VBoxContainer/ReRollButtonButton" to="." method="_on_ReRollButtonButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomSpacer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
